# Myohuman

./: .gitignore  README.md  install.sh  pyproject.toml
cfg/: config.yaml  eval_config.yaml
cfg/learning/: im_mlp.yaml
cfg/run/: eval_run.yaml  train_run.yaml
data/: README.md
data/dataset/: kit_test_keys.txt  kit_test_motion_dict.pkl  kit_train_keys.txt  kit_train_motion_dict.pkl
data/initial_pose/: initial_pose_test.pkl  initial_pose_train.pkl
models/kinesis_im/.hydra/: config.yaml  hydra.yaml
notebooks/: dataset.ipynb
scripts/: convert_kit.py  initial_pose.py  run.py  simulate.py
src/myohuman/KinesisCore/: forward_kinematics.py  kinesis_core.py
src/myohuman/agents/: agent.py  agent_humanoid.py  agent_im.py  agent_ppo.py
src/myohuman/env/: myolegs_base_env.py  myolegs_env.py  myolegs_im.py  myolegs_task.py
src/myohuman/learning/: critic.py  experts.py  learning_utils.py  logger_rl.py  memory.py  mlp.py  policy_gaussian.py  policy_lattice.py  policy_moe.py  running_norm.py
src/myohuman/smpl/: smpl_parser.py
src/myohuman/utils/: np_transform_utils.py  pytorch3d_transforms.py  rotation_tools.py  torch_utils.py  visual_capsule.py
src/myohuman/utils/smpl_skeleton/: skeleton_mesh_local.py  smpl_local_robot.py
xml/: myohuman.xml  smpl_humanoid.xml
xml/assets/: myoarm_assets.xml  myoarm_chain.xml  myohead_assets.xml  myolegs_assets.xml  myolegs_chain.xml  myotorso_assets.xml  myotorso_chain.xml
xml/scene/: myosuite_scene_noPedestal.xml
